--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,4 +17,9 @@
 
   </body>
 
+  <script src="/assets/js/vendor/google_analytics.js"></script>
+  <script src="/assets/js/vendor/jquery.js"></script>
+  <script src="/assets/js/vendo/typed.js"></script>
+  <script src="/assets/js/quote.js"></script>
+
 </html>
