--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,24 @@
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+
+  &.m-align-bottom { align-items: flex-end; }
+
+  > * + * { margin-left: 0.5em; }
+  > * { width: 1px; } // fallback to help me detect misspelled classes
+  > .col-25 { width: 25%; }
+  > .col-33 { width: 33.3%; }
+  > .col-40 { width: 40%; }
+  > .col-50 { width: 50%; }
+  > .col-60 { width: 60%; }
+  > .col-66 { width: 66.6%; }
+  > .col-75 { width: 75%; }
+}
+
+
+
 /**
  * Site header
  */
@@ -32,14 +53,18 @@
         display: none;
     }
 
-    .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
+    .e-link {
+      color: #666;
 
-        // Gaps between nav items, but not on the last one
-        &:not(:last-child) {
-            margin-right: 20px;
-        }
+      &:hover { color: #000; text-decoration: none; }
+      &.m-active { color: #000; }
+
+      line-height: $base-line-height;
+
+      // Gaps between nav items, but not on the last one
+      &:not(:last-child) {
+        margin-right: 20px;
+      }
     }
 
     @include media-query($on-palm) {
@@ -80,93 +105,25 @@
             padding-bottom: 5px;
         }
 
-        .page-link {
-            display: block;
-            padding: 5px 10px;
+        .e-link {
+          display: block;
+          padding: 5px 10px;
 
-            &:not(:last-child) {
-                margin-right: 0;
-            }
-            margin-left: 20px;
+          &:not(:last-child) { margin-right: 0; }
+          margin-left: 20px;
         }
     }
 }
 
 
 
-/**
- * Site footer
- */
-.site-footer {
-    border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
-}
-
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
-}
-
-.contact-list,
-.social-media-list {
-    list-style: none;
-    margin-left: 0;
-}
-
-.footer-col-wrapper {
-    font-size: 15px;
-    color: $grey-color;
-    margin-left: -$spacing-unit / 2;
-    @extend %clearfix;
-}
-
-.footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-}
-
-.footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
-}
-
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
-    }
-
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-@include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
+.b-footer {
+  border-top: 1px solid $grey-color-light;
+  padding: $spacing-unit 0;
 }
 
 
 
-/**
- * Page content
- */
 .page-content {
     padding: $spacing-unit 0;
 }
