--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -49,5 +49,7 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
+        "bem",
+        "utilities",
         "syntax-highlighting"
 ;
