Finish porting old content; polish & style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,19 @@
 <div class="b-footer">
 
   <div class="wrapper">
-    <h3>Topher Hunt</h3>
+    <div class="u-hidden u-text-center js-email-div"></div>
 
-    <!-- TODO: Icons would be nice -->
-    <div>
-      <a href="mailto:{{ site.email }}">Email</a>
-      &nbsp;
+    <div class="u-text-center">
+      <a href="/"><strong>Topher Hunt</strong></a>
+      •
+      <a href="#" class="js-reveal-email">Email</a>
+      •
+      <!-- TODO: Icons would be nice -->
       <a href="https://github.com/topherhunt" target="_blank">Github</a>
-      &nbsp;
+      •
       <a href="https://twitter.com/hunttopher" target="_blank">Twitter</a>
-      &nbsp;
+      •
       <a href="https://www.linkedin.com/pub/topher-hunt/25/25b/685" target="_blank">LinkedIn</a>
     </div>
   </div>
-
 </div>
