--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
 
   <script src="/assets/js/vendor/google_analytics.js"></script>
   <script src="/assets/js/vendor/jquery.js"></script>
-  <script src="/assets/js/vendo/typed.js"></script>
+  <script src="/assets/js/vendor/typed.js"></script>
+  <script src="/assets/js/misc.js"></script>
   <script src="/assets/js/quote.js"></script>
 
 </html>
