--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,199 +1,100 @@
+html { min-height: 100%; }
+body { min-height: 100%; background-image: linear-gradient(#fff, #eee); }
 
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+.b-site-header {
+  background-image: linear-gradient(#ffffff, #f8f8f8);
+  border-bottom: 1px solid $grey-color-light;
+  min-height: 56px;
 
-  &.m-align-bottom { align-items: flex-end; }
+  // Positioning context for the mobile navigation icon
+  position: relative;
 
-  > * + * { margin-left: 0.5em; }
-  > * { width: 1px; } // fallback to help me detect misspelled classes
-  > .col-25 { width: 25%; }
-  > .col-33 { width: 33.3%; }
-  > .col-40 { width: 40%; }
-  > .col-50 { width: 50%; }
-  > .col-60 { width: 60%; }
-  > .col-66 { width: 66.6%; }
-  > .col-75 { width: 75%; }
+  margin-bottom: 1em;
 }
 
-
-
-/**
- * Site header
- */
-.site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
-
-    // Positioning context for the mobile navigation icon
-    position: relative;
+.b-site-title {
+  font-size: 26px;
+  line-height: 56px;
+  letter-spacing: -1px;
+  margin-bottom: 0;
+  float: left;
+  color: #333;
 }
 
-.site-title {
-    font-size: 26px;
-    font-weight: 300;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
+.b-site-nav {
+  float: right;
+  line-height: 56px;
 
-    &,
-    &:visited {
-        color: $grey-color-dark;
+  .e-menu-icon {
+    display: none;
+  }
+
+  .e-link {
+    color: #666;
+
+    &:hover { color: #000; text-decoration: none; }
+    &.m-active { color: #000; }
+
+    line-height: $base-line-height;
+
+    // Gaps between nav items, but not on the last one
+    &:not(:last-child) {
+      margin-right: 20px;
     }
-}
+  }
 
-.site-nav {
-    float: right;
-    line-height: 56px;
+  @include media-query($on-palm) {
+    position: absolute;
+    top: 9px;
+    right: $spacing-unit / 2;
+    background-color: $background-color;
+    border: 1px solid $grey-color-light;
+    border-radius: 5px;
+    text-align: right;
 
-    .menu-icon {
-        display: none;
-    }
+    .e-menu-icon {
+      display: block;
+      float: right;
+      width: 36px;
+      height: 26px;
+      line-height: 0;
+      padding-top: 10px;
+      text-align: center;
 
-    .e-link {
-      color: #666;
+      > svg {
+        width: 18px;
+        height: 15px;
 
-      &:hover { color: #000; text-decoration: none; }
-      &.m-active { color: #000; }
-
-      line-height: $base-line-height;
-
-      // Gaps between nav items, but not on the last one
-      &:not(:last-child) {
-        margin-right: 20px;
+        path { fill: $grey-color-dark; }
       }
     }
 
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .e-link {
-          display: block;
-          padding: 5px 10px;
-
-          &:not(:last-child) { margin-right: 0; }
-          margin-left: 20px;
-        }
+    .trigger {
+      clear: both;
+      display: none;
     }
+
+    &:hover .trigger {
+      display: block;
+      padding-bottom: 5px;
+    }
+
+    .e-link {
+    display: block;
+    padding: 5px 10px;
+
+    &:not(:last-child) { margin-right: 0; }
+    margin-left: 20px;
+    }
+  }
 }
-
-
 
 .b-footer {
-  border-top: 1px solid $grey-color-light;
-  padding: $spacing-unit 0;
-}
+  border-top: 1px solid #ddd;
+  // background-image: linear-gradient(#f0f0f0, #e8e8e8);
+  // background-color: #fff;
+  // box-shadow: 0px -5px 10px -5px rgba(0, 0, 0, 0.2);
 
-
-
-.page-content {
-    padding: $spacing-unit 0;
-}
-
-.page-heading {
-    font-size: 20px;
-}
-
-.post-list {
-    margin-left: 0;
-    list-style: none;
-
-    > li {
-        margin-bottom: $spacing-unit;
-    }
-}
-
-.post-meta {
-    font-size: $small-font-size;
-    color: $grey-color;
-}
-
-.post-link {
-    display: block;
-    font-size: 24px;
-}
-
-
-
-/**
- * Posts
- */
-.post-header {
-    margin-bottom: $spacing-unit;
-}
-
-.post-title {
-    font-size: 42px;
-    letter-spacing: -1px;
-    line-height: 1;
-
-    @include media-query($on-laptop) {
-        font-size: 36px;
-    }
-}
-
-.post-content {
-    margin-bottom: $spacing-unit;
-
-    h2 {
-        font-size: 32px;
-
-        @include media-query($on-laptop) {
-            font-size: 28px;
-        }
-    }
-
-    h3 {
-        font-size: 26px;
-
-        @include media-query($on-laptop) {
-            font-size: 22px;
-        }
-    }
-
-    h4 {
-        font-size: 20px;
-
-        @include media-query($on-laptop) {
-            font-size: 18px;
-        }
-    }
+  padding: 1em 0;
+  margin-top: 1em;
 }
