--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
-<header class="site-header">
+<header class="b-site-header">
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="b-site-title" href="{{ site.baseurl }}/">Topher Hunt</a>
 
-    <nav class="site-nav">
-      <a href="#" class="menu-icon">
+    <nav class="b-site-nav">
+      <a href="#" class="e-menu-icon">
         <svg viewBox="0 0 18 15">
           <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
           <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
@@ -14,9 +14,11 @@
       </a>
 
       <div class="trigger">
-        {% for link in site.data.nav_links %}
-          <a class="e-link {% if page.url == link.url %}m-active{% endif %}" href="{{ link.url | prepend: site.baseurl }}">{{ link.name }}</a>
-        {% endfor %}
+        {% include nav_link.html name="my story" url="/my_story/" %}
+        {% include nav_link.html name="resumé" url="/resume/" %}
+        {% include nav_link.html name="projects" url="/projects/" %}
+        {% include nav_link.html name="cheatsheets" url="https://github.com/topherhunt/cheatsheets" target="_blank" %}
+        {% include nav_link.html name="mazes" url="/mazes/" %}
       </div>
     </nav>
 
