--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,9 +47,9 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "base",
-        "layout",
-        "bem",
-        "utilities",
-        "syntax-highlighting"
+  "base",
+  "layout",
+  "utilities",
+  "specific",
+  "syntax-highlighting"
 ;
