--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -5,19 +5,12 @@
 .row {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 
   &.m-align-bottom { align-items: flex-end; }
 
   > * + * { margin-left: 0.5em; }
-  > * { width: 1px; } // fallback to help me detect misspelled classes
-  > .col-25 { width: 25%; }
-  > .col-33 { width: 33.3%; }
-  > .col-40 { width: 40%; }
-  > .col-50 { width: 50%; }
-  > .col-60 { width: 60%; }
-  > .col-66 { width: 66.6%; }
-  > .col-75 { width: 75%; }
+  > .col-1x { flex-basis: 18rem; flex-grow: 1; }
 }
 
 .b-stack {
