Add Beeminder link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,8 @@
       <a href="https://twitter.com/hunttopher" target="_blank">Twitter</a>
       •
       <a href="https://www.linkedin.com/pub/topher-hunt/25/25b/685" target="_blank">LinkedIn</a>
+      •
+      <a href="https://www.beeminder.com/topherhunt" target="_blank" class="u-tooltip-target">BeeMinder progress<div class="u-tooltip">BeeMinder is a productivity and "motivation management" app that helps you stay on track with your personal commitments. I've made my profile public, because knowing someone might see it helps motivate me to keep my ducks in a row.</div></a>
     </div>
   </div>
 </div>
