Add Pinboard footer link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,22 @@
 <div class="b-footer">
 
   <div class="wrapper">
-    <div class="u-hidden u-text-center js-email-div"></div>
-
     <div class="u-text-center">
       <a href="/"><strong>Topher Hunt</strong></a>
       •
-      <a href="#" class="js-reveal-email">Email</a>
+      <a href="#" class="js-reveal-email">✉️ Email</a>
       •
       <!-- TODO: Icons would be nice -->
       <a href="https://github.com/topherhunt" target="_blank">Github</a>
       •
-      <a href="https://twitter.com/hunttopher" target="_blank">Twitter</a>
-      •
       <a href="https://www.linkedin.com/pub/topher-hunt/25/25b/685" target="_blank">LinkedIn</a>
       •
-      <a href="https://www.beeminder.com/topherhunt" target="_blank" class="u-tooltip-target">BeeMinder progress<div class="u-tooltip">BeeMinder is a productivity and "motivation management" app that helps you stay on track with your personal commitments. I've made my profile public, because knowing someone might see it helps motivate me to keep my ducks in a row.</div></a>
+      <a href="https://twitter.com/hunttopher" target="_blank">🐦 Twitter</a>
+      •
+      <a href="https://www.beeminder.com/topherhunt" target="_blank" class="u-tooltip-target">🐝 BeeMinder<div class="u-tooltip">BeeMinder is a productivity and "motivation management" app that helps you stay on track with your personal commitments. I've made my profile public, because knowing someone might see it helps motivate me to keep my ducks in a row.</div></a>
+      •
+      <a href="https://pinboard.in/u:topherhunt" target="_blank" class="u-tooltip-target">📌 Pinboard<div class="u-tooltip">My public collection of interesting sites, articles, apps, etc.</div></a>
     </div>
+    <div class="u-hidden u-text-center js-email-div"></div>
   </div>
 </div>
