--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,6 @@
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
+  <script data-goatcounter="https://topherhunt.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
